<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
	
   <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/tvServer">            
        </TextView>
        <Spinner
            android:id="@+id/mySpinner"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_margin="5dp">            
        </Spinner>
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
        	<Button 
             android:id="@+id/btnConnect"
		     android:width="120dp" 
		     android:layout_width="90dp"
		     android:layout_height="wrap_content"
		     android:text="@string/btnConnect">
		</Button>
		<Button 
             android:id="@+id/btnClear"
		     android:width="120dp" 
		     android:layout_width="90dp"
		     android:layout_height="wrap_content"
		     android:text="@string/btnClear">
		</Button>
        </LinearLayout>
               
  </LinearLayout>
    
</ScrollView>